tests/asm-link/empty-local-used/rgbasm.err
error: a component of this identifier is empty
   ╭─[ test.asm:4:4 ]
   │
 4 │ dw Label.
   │    ───┬──  
   │       ╰──── dots cannot be trailing or consecutive
───╯
1 error generated.
